# pcms

./: .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  build.sh  classThreadPool.html  classTree-members.html  classTree.html  classcritical__beta__splitting__distribution-members.html  classcritical__beta__splitting__distribution.html  classes.html  classpcms_1_1tree_1_1CriticalBetaSplittingDistribution.html  classpcms_1_1tree_1_1Tree-members.html  dir_000002_000000.html  dir_000004_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_9d6b23472e3b10a46ee66c4ba765cc25.html  dir_a6711b07050db66593f6043c969c9db9.html  dir_a6711b07050db66593f6043c969c9db9_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dist_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals_func.html  graph_legend.html  haar-dist_8hpp__dep__incl.dot  haar-dist_8hpp__incl.dot  haar-dist_8hpp_source.html  haar-sparsify_8hpp_source.html  namespaces.html  pyproject.toml  pytest.ini  requirements-notebooks.txt  requirements.txt  (+18 more)
data/: gg_97_otus_edge_length_distribution.csv  tax_table_output.txt
doc/html/: classThreadPool-members.html  classcritical__beta__splitting__distribution-members.html  classcritical__beta__splitting__distribution.html  classpcms_1_1tree_1_1CriticalBetaSplittingDistribution-members.html  classpcms_1_1tree_1_1Tree.html  dir_000003_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c44c95bf3b41c3321c6014770d618ac8.html  dir_c44c95bf3b41c3321c6014770d618ac8_dep.dot  files.html  functions.html  functions_func.html  globals.html  haar-dist_8cpp.html  haar-dist_8cpp__incl.dot  haar-dist_8hpp.html  haar-sparsify_8cpp.html  haar-sparsify_8cpp__incl.dot  haar-sparsify_8hpp.html  haar-sparsify_8hpp__dep__incl.dot  haar-sparsify_8hpp__incl.dot  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacepcms_1_1haar.html  namespacepcms_1_1tree.html  thread-pool_8hpp__dep__incl.dot  thread-pool_8hpp__incl.dot  tree-dist_8hpp_source.html  tree_8hpp.html
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_a.js  all_c.js  classes_0.js  classes_1.js  functions_0.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  namespaces_0.js  variables_1.js  variables_2.js  variables_3.js
include/: dist.hpp  haar-dist.hpp  haar-sparsify.hpp  rand.hpp  sparse.hpp  thread-pool.hpp  tree-dist.hpp  tree.hpp  utils.hpp
notebooks/: asymptotic_distribution.ipynb  cbst_example.ipynb  central_limit_theorem.ipynb  greengenes_median_minor_split_size.ipynb  greengenes_median_subtree_size.ipynb  guerrero_negro_analysis.ipynb  guerrero_negro_analysis_example.ipynb  guerrero_negro_example.ipynb  haar_component_analysis_example.ipynb  haar_like_wavelets_level_of_significance.ipynb  moment_asymptotics.ipynb  series_approximations.ipynb  sparsification_example.ipynb
notebooks/utils/: __init__.py  _build_gg_otu_id2tax_map.py  _build_gg_seq_id2leaf_idx_map.py  _load_bs_samp2site_map.py  _load_gg_seq_id2_otu_id_maps.py  _load_gg_seq_id2otu_id_maps.py  _load_gn_seq_id_abundances.py  _load_seq_id_abundances_from_biom_tsv.py  _moment_asymptotics.py  _perm_test_maxsplit_ks.py  constants.py  plot.py
pcms/: __init__.py  haar.py  plot.py  random.py  sparse.py  sparsify.py  stats.py  tree.py  tree_utils.py
pcms/include/: tree_module.h  tree_node_module.h
pcms/src/: tree_module.c  tree_node_module.c
scripts/: build_accession_list.sh  build_seq_manifest.py  cluster_query_seqs.sh  convert_qza_table2csv.sh  dereplicate_seqs.sh  expand_series.py  expand_series2.py  fetch_ncbi_genbank_files.sh  fetch_query_seqs.sh  gg_13_8_97ref_97clust_JN427016_JN539989.sh  import_query_seqs.sh  import_query_seqs_from_manifest.sh  open_ref_cluster.sh  simplify_E_EEPL2.py  simplify_Lx_b.py  solve_Lx_b2_num.py  solve_Lx_b2_sym.py  solve_Lx_b_num.py  solve_Lx_b_sym.py
scripts/epa-ng-utils/: insert_fragments.sh
scripts/fasta-utils/: align_new_refs.sh  fetch_accession_list.sh  fetch_ncbi_genbank_files.sh  parse_new_refs.sh  reduce_alignment.sh
scripts/nwk-utils/: prune_tree.sh
scripts/open_ref_cluster/: dereplicate_seqs.sh
scripts/open_ref_cluster_from_genbank/: fetch_ncbi_genbank_files.sh
scripts/qiime2-utils/: build_fastq_manifest.py  dereplicate_seqs.sh  export_seqs_to_fasta_from_qza.sh  export_table_to_tsv_from_qza.sh  fetch_accession_list.sh  fetch_ncbi_genbank_files.sh  filter_chimeras.sh  import_query_seqs_from_manifest.sh  import_seqs_from_manifest.sh  open_ref_cluster_seqs.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: dist.cpp  pybind11.cpp  tree.cpp
src/haar/: haar-dist.cpp  haar-sparsify.cpp  pybind11.cpp
src/sparse/: pybind11.cpp  sparse.cpp
src/tree/: pybind11.cpp  tree-dist.cpp  tree.cpp
tests/: conftest.py
tests/benchmarks/: mkl_benchmark.py  mkl_benchmark.sh
tests/profiles/: cdf_proj_cbst_profile.py
tests/tree/: test_tree_cbst_distribution.py  test_tree_core.py  test_tree_numerics.py  test_tree_nwk2tree.py  test_tree_random.py  test_tree_topology.py
