[build-system]
requires = [
    "setuptools>=61", 
    "wheel", 
    "pybind11>=2.13",
    "numpy",
    "scipy"
]
build-backend = "setuptools.build_meta"

[project]
name = "pcms"
version = "0.1.0"
description = "Phylogenetic covariance matrix sparsification"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Sean Svihla" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
notebooks = [
    "pandas",
    "matplotlib",
    "jupyter",
]
