[metadata]
name = pcms
version = 0.1.0
description = Phylogenetic covariance matrix sparsification
author = Sean Svihla
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
notebooks =
    numpy
    scipy
    pandas
    matplotlib
    jupyter
